@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension type="module" version="1.6.0" client="site"
+<extension type="module" version="1.7" client="site"
 	method="upgrade"
 >
 	<name>mod_articles_category</name>
@@ -11,7 +11,7 @@
 		LICENSE.txt</license>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>MOD_ARTICLES_CATEGORY_XML_DESCRIPTION
 	</description>
 	<files>
