@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <extension
 	type="module"
-	version="1.6.0"
+	version="1.7"
 	client="site"
 	method="upgrade">
 	<name>mod_users_latest</name>
@@ -11,7 +11,7 @@
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>MOD_USERS_LATEST_XML_DESCRIPTION</description>
 	<files>
 		<filename module="mod_users_latest">mod_users_latest.php</filename>
